Shift interlude code out of issue 2

--- a/content/issues/2/strangers-in-the-landscape/style.css
+++ b/content/issues/2/strangers-in-the-landscape/style.css
@@ -1,25 +1,5 @@
 /* custom interlude code */
 
-.interlude {
-    /* page-break-inside: avoid; */
-    position: relative;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-}
-
-.interlude::before {
-    content: '';
-    position: absolute;
-    width: 100vw;
-    top: 0;
-    left: -10px;
-    height: 100%;
-    background: #4C2A85;
-}
-
-.interlude h2, .interlude h3 { width:  100%; }
-
 .interlude .center {
     display: flex;
     justify-content: center;
@@ -62,22 +42,11 @@
      margin-bottom: 0;
 }*/
 
-.interlude strong {
-    font-weight: 700;
-    clear: both;
-}
-
 @media (min-width: 768px) {
-    .interlude::before { left: calc((100vw - 10px) / 10 * -1 - 10px) }
     .interlude .center { max-width: 550px; }
 }
 
-@media (min-width: 1024px) {
-    .interlude::before { left: calc((100vw - 10px) / 10 * -2 - 10px) }
-}
-
 @media print {
-    .interlude::before { background: none; }
     .interlude .center { color: #4C2A85; }
 
     body.article iframe {
